# trainingcalc

./: .black  .flake8  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: conftest.py  test_addition.py  test_api.py  test_api_addition.py
trainingcalc/: __init__.py  __main__.py  api.py  calculator.py
trainingcalc/static/: styles.css
trainingcalc/templates/: index.html
